tree-sitter-plumb/test/corpus/continuations.txt
==================
Deferred head
==================

`-
   continued head

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (headed_body
      (head_continuation
        (inline_content
          (text))))))

==================
Hanging head continuation
==================

`- first
   second

   child

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (head_separator)
    (inline_content
      (text))
    (headed_body
      (head_continuation
        (inline_content
          (text)))
      (blank_line)
      (paragraph
        (inline_content
          (text))))))

==================
Short head continuation
==================

`- first
 second

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (head_separator)
    (inline_content
      (text))
    (headed_body
      (head_continuation
        (inline_content
          (text))))))

==================
Unindented sibling paragraph
==================

`- item
something

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (head_separator)
    (inline_content
      (text)))
  (paragraph
    (inline_content
      (text))))

==================
Inline spellings continue paragraphs and parsed content
==================

first
``literal
`{open
`}close
`span[parsed]
`text"raw"
`text"[strengthened]"

`outer[first
`inner[nested] `text"raw"]

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text))
    (inline_content
      (introducer_escape)
      (text))
    (inline_content
      (brace_escape)
      (text))
    (inline_content
      (brace_escape)
      (text))
    (inline_content
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text))))
    (inline_content
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text)))
    (inline_content
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))))
  (blank_line)
  (paragraph
    (inline_content
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)
          (soft_break)
          (inline_element
            (introducer)
            (inline_kind)
            (parsed_inline_content
              (inline_member_text)))
          (inline_member_text)
          (inline_verbatim
            (introducer)
            (verbatim_kind)
            (raw_text)))))))
