tree-sitter-plumb/test/corpus/errors.txt
==================
Recover after unclosed parsed inline
==================

broken `kind[unfinished
`next block

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (space)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text))
        (MISSING "]"))))
  (marked_block
    (introducer)
    (marker)
    (inline_content
      (space)
      (text))))

==================
Reject parsed inline across blank line
==================

broken `kind[first line

second line]

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (space)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)
          (space)
          (inline_member_text))
        (MISSING "]"))))
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (space)
      (text))
    (ERROR)))

==================
Recover after unclosed compact verbatim
==================

broken `rust"unfinished
`next block

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (space)
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (MISSING raw_text))
      (text)))
  (marked_block
    (introducer)
    (marker)
    (inline_content
      (space)
      (text))))

==================
Recover after unclosed strengthened verbatim
==================

broken `"[unfinished
`next block

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (space)
      (inline_verbatim
        (introducer)
        (ERROR
          (verbatim_open))
        (verbatim_kind)
        (MISSING raw_text))))
  (marked_block
    (introducer)
    (marker)
    (inline_content
      (space)
      (text))))

==================
Reject verbatim block head
==================

`" unexpected head

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (ERROR
      (verbatim_open)
      (space))
    (marker)
    (inline_content
      (space)
      (text))))

==================
Reject partial dedent
==================

`outer
    `inner
   partial
`next

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (block_body
      (marked_block
        (introducer)
        (marker))))
  (paragraph
    (inline_content
      (space)
      (text)))
  (marked_block
    (introducer)
    (marker)))

==================
Tab cannot open a marked head
==================

`task	invalid

---

(document
  (blank_line)
  (marked_block
    (introducer)
    (marker)
    (ERROR
      (UNEXPECTED '\t'))))
