tree-sitter-plumb/test/corpus/inlines.txt
==================
Parsed inline elements
==================

Text with `*[emphasis] and `outer[before `inner[nested] after].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)))
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)
          (inline_element
            (introducer)
            (inline_kind)
            (parsed_inline_content
              (inline_member_text)))
          (inline_member_text)))
      (text))))

==================
Parsed inline members
==================

Use `pair[first|second] and `pair[|third|+[tag]].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text))
        (member_separator)
        (parsed_inline_content
          (inline_member_text)))
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (member_separator)
        (parsed_inline_content
          (inline_member_text))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text)))))
      (text))))

==================
Ordered arguments and children
==================

See `->[guide|@[main]|+[external]|=[to|guide.plumb]].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text))))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text))))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text))
            (member_separator)
            (parsed_inline_content
              (inline_member_text)))))
      (text))))

==================
Empty parsed inline argument
==================

An empty `kind[] element.

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind))
      (text))))

==================
Opening bracket and closing escape
==================

Use `kind[literal `[ and `] brackets].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)
          (bracket_escape)
          (inline_member_text)
          (bracket_escape)
          (inline_member_text)))
      (text))))

==================
Compact inline verbatim
==================

Use `"raw", `rust"let x = 1;", `$"x^2", `->"guide.plumb#intro", and `"{}".

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_verbatim
        (introducer)
        (raw_text))
      (text)
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))
      (text)
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))
      (text)
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))
      (text)
      (inline_verbatim
        (introducer)
        (raw_text))
      (text))))

==================
Line-start compact inline verbatim
==================

`->"something.plumb"

`->"[https://[2001:db8::1]/]"

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))))
  (blank_line)
  (paragraph
    (inline_content
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text)))))

==================
Strengthened inline verbatim
==================

Use `"[raw containing " safely]" and `rust""[raw containing ]" safely]"".

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_verbatim
        (introducer)
        (raw_text))
      (text)
      (inline_verbatim
        (introducer)
        (verbatim_kind)
        (raw_text))
      (text))))

==================
Verbatim argument with children
==================

Use `code["let x = 1;"|@[example]|=[generated|true]].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text))))
        (member_separator)
        (inline_child
          (inline_element
            (inline_kind)
            (parsed_inline_content
              (inline_member_text))
            (member_separator)
            (parsed_inline_content
              (inline_member_text)))))
      (text))))

==================
Multiline parsed inline
==================

Paragraph `kind[first line
second line] tail.

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)
          (soft_break)
          (inline_member_text)))
      (text))))

==================
Introducer runs
==================

``literal and ```kind[value].

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (introducer_escape)
      (text)
      (introducer_escape)
      (inline_element
        (introducer)
        (inline_kind)
        (parsed_inline_content
          (inline_member_text)))
      (text))))

==================
Ordinary brackets
==================

Plain [brackets] and closing ] remain text.

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text))))

==================
Unified delimiter escapes
==================

escaped `[ `] `{ `} `| delims

---

(document
  (blank_line)
  (paragraph
    (inline_content
      (text)
      (bracket_escape)
      (text)
      (bracket_escape)
      (text)
      (brace_escape)
      (text)
      (brace_escape)
      (text)
      (pipe_escape)
      (text))))
